added style changes

--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
 </head>
 
 <body>
+	
+	<div class=head>
+		<div class="title">COVID-19 IN CANADA</div>
+		<h2>Live statistics / Outbreak update</h2>	
+	</div>
+
 
 	<header>
 	<section id="home">
 
-
-		<div class="title">COVID-19 IN CANADA</div>
-		<h2>Live statistics / Outbreak update</h2>
 
 		<div class="container">
 			<div class="overview-stats"> 
