--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
 </head>
 
 <body>
-	
+	<header>
 	<div class=head>
 		<div class="title">COVID-19 IN CANADA</div>
 		<h2>Live statistics / Outbreak update</h2>	
 	</div>
 
 
-	<header>
-	<section id="home">
+	</header>
+
+	<div class="main-overview">
+		<section id="home">
 
 
 		<div class="container">
@@ -58,8 +60,8 @@
 			</div>
 		</div>
 
-	</section>
-	</header>
+	    </section>
+    </div>
 
 	<!-- <div style="height: 220px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C140.14,96.22 271.49,-49.99 500.00,49.99 L500.00,0.00 L0.00,0.00 Z" style="stroke: none; fill: #000;"></path></svg></div> -->
 	<!-- <div style="height: 300px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C273.89,177.15 271.49,-49.99 500.00,49.99 L500.00,0.00 L0.00,0.00 Z" style="stroke: none; fill: #000;"></path></svg></div> -->
