style: added emojis

--- a/index.html
+++ b/index.html
@@ -148,25 +148,25 @@
 				<div class="prevention-list ">
 					<ul>
 						<li>
-							Maintain a safe distance from others (at least 1 metre), even if they don’t appear to be sick.
+							📏 Maintain a safe distance from others (at least 1 metre), even if they don’t appear to be sick.
 						</li>
 						<li>
-							Wear a mask in public, especially indoors or when physical distancing is not possible.
+							😷 Wear a mask in public, especially indoors or when physical distancing is not possible.
 						</li>
 						<li>
-							Choose open, well-ventilated spaces over closed ones. Open a window if indoors.
+							🏞️ Choose open, well-ventilated spaces over closed ones. Open a window if indoors.
 						</li>
 						<li>
-							Clean your hands often. Use soap and water, or an alcohol-based hand rub.
+							🧼 Clean your hands often. Use soap and water, or an alcohol-based hand rub.
 						</li>
 						<li>
-							Get vaccinated when it’s your turn. Follow local guidance about vaccination.
+							💉 Get vaccinated when it’s your turn. Follow local guidance about vaccination.
 						</li>
 						<li>
-							Cover your nose and mouth with your bent elbow or a tissue when you cough or sneeze.
+							🤧 Cover your nose and mouth with your bent elbow or a tissue when you cough or sneeze.
 						</li>
 						<li>
-							Stay home if you feel unwell.
+							🏠 Stay home if you feel unwell.
 						</li>
 					</ul>
 				</div>
